--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "dependencies": {
         "vue": "^3.2.47",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "socket.io-client": "^4.7.1",
+        "@feathersjs/client": "^5.0.7"
     },
     "devDependencies": {
         "@jscomponent/rollup": "^1.0.4",
