--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "vue": "^3.2.47",
         "vue-router": "^4.1.6",
         "socket.io-client": "^4.7.1",
-        "@feathersjs/client": "^5.0.7"
+        "@feathersjs/client": "^5.0.7",
+        "moment": "^2.29.4"
     },
     "devDependencies": {
         "@jscomponent/rollup": "^1.0.4",
