--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
     "homepage": "https://vueplayground.com",
-    "name": "@jscomp/demo",
-    "version": "1.0.2",
+    "name": "vueplay",
+    "version": "1.1.8",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "dependencies": {
-        "vue": "^3.2.47",
-        "vue-router": "^4.1.6",
-        "socket.io-client": "^4.7.1",
-        "@feathersjs/client": "^5.0.7",
-        "moment": "^2.29.4"
+        "vue": "^3.4.19",
+        "vue-router": "^4.2.5",
+        "socket.io-client": "^4.7.4",
+        "@feathersjs/client": "^5.0.22",
+        "moment": "^2.30.1"
     },
     "devDependencies": {
         "@jscomponent/rollup": "^1.0.4",
-        "@rollup/plugin-data-uri": "^1.0.2",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "rollup-plugin-gzip": "^3.1.0",
-        "vite": "^4.1.1",
-        "tailwindcss": "^3.3.2",
-        "autoprefixer": "^10.4.14",
-        "postcss": "^8.4.24"
+        "@rollup/plugin-data-uri": "^1.0.3",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "rollup-plugin-gzip": "^3.1.1",
+        "vite": "^5.1.3",
+        "tailwindcss": "^3.4.1",
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.35"
     }
 }
