--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "vue-router": "^4.2.5",
         "socket.io-client": "^4.7.4",
         "@feathersjs/client": "^5.0.22",
-        "moment": "^2.30.1"
+        "moment": "^2.30.1",
+        "highlight.js": "^11.9.0"
     },
     "devDependencies": {
         "@jscomponent/rollup": "^1.0.4",
