--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "socket.io-client": "^4.7.4",
         "@feathersjs/client": "^5.0.22",
         "moment": "^2.30.1",
-        "highlight.js": "^11.9.0"
+        "highlight.js": "^11.9.0",
+        "@unhead/vue": "^2.0.0-rc.13"
     },
     "devDependencies": {
         "@jscomponent/rollup": "^1.0.4",
